--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <p class="intro">
       Hola mi nombre es Jose Moreira, estoy en 5to nivel de Tecnologia de la Informacion, 
       en la Universidad Lica Eloy Alfaro de Manabi.
+      Me gusta el Desarrollo de Paginas Web, APP, y entre otros.
+      Vivo en Manta y me gusta mucho la Informatica.
 
       <ul class="social-media">
         <li>
